<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CredencialDeAcessoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtFinalizacaoCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/txtFinalizacaoCadastro"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNomeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:text="@string/txtNome"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNomeUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:ems="10"
                android:hint="@string/txtHintNome"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:text="@string/txtEmail"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/txtHintEmail"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtSenhaA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtSenhaA"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSenhaA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/txtHintSenhaA"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/txtSenhaB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtSenhaB"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSenhaB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/txtHintSenhaB"
                android:inputType="numberPassword" />

            <CheckBox
                android:id="@+id/ckTermo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:onClick="validarTermo"
                android:text="@string/acordoUsolido"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCadastroUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/btnCadastro" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>