<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity"
    android:background="@drawable/cam">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/txtAppName"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:shadowColor="@color/design_default_color_on_secondary"
                android:shadowRadius="45"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:textSize="36dp"
                />


            <TextView
                android:id="@+id/txtLogin"
                android:layout_gravity="center_horizontal"
                android:text="@string/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:shadowColor="@color/design_default_color_on_secondary"
                android:shadowRadius="45"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:textSize="30sp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBranco"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:outlineAmbientShadowColor="@color/black"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgBackground"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:id="@+id/txtEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/txtEmail"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginRight="16dp"
                            android:ems="10"
                            android:hint="@string/txtHintEmail"
                            android:inputType="textEmailAddress" />

                        <TextView
                            android:id="@+id/txtSenhaA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/txtSenhaA"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editSenhaA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginRight="16dp"
                            android:ems="10"
                            android:hint="@string/txtHintSenhaA"
                            android:inputType="numberPassword" />
                    </LinearLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/ckLembrar"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:onClick="lembrarSenha"
                            android:text="@string/txtLembrar"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtRecurarSenha"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:padding="9dp"
                            android:text="@string/txtRecurarSenha"
                            android:textStyle="bold" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <Button
                        android:id="@+id/btnAcessar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/custom_background"
                        android:text="@string/btnAcessar"
                        android:textColor="@color/colorBranco"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:shadowColor="@color/black"
                        android:shadowRadius="45"/>

                </LinearLayout>


            </RelativeLayout>





            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_margin="4dp"
                android:layout_centerHorizontal="true">



                <Button
                    android:id="@+id/btnSejaVip"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/btnSejaVip"
                    android:textColor="@color/colorBranco"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:shadowColor="@color/black"
                    android:shadowRadius="45"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/txtVersaoApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/txtVersapApp"
                android:textSize="14dp"
                android:textStyle="bold"
                android:shadowColor="@color/colorBranco"
                android:shadowRadius="45"/>

            <TextView
                android:id="@+id/txtLerPolitica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/txtLerPolitica"
                android:textSize="14dp"
                android:textStyle="bold"
                android:shadowColor="@color/colorBranco"
                android:shadowRadius="45"/>

        </LinearLayout>
    </ScrollView>




</androidx.appcompat.widget.LinearLayoutCompat>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".LoginActivity">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->